--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
 }
 
 body {
+  width: 1920px;
+  height: 1080px;
   margin: 0;
   font-family: Pretendard;
   background-color: #fffae2;
@@ -26,8 +28,8 @@ body {
 }
 
 #intro-screen {
-  width: 100vw;
-  height: 100vh;
+  width: 1920px;
+  height: 1080px;
   background: #fffae2;
   color: black;
   display: flex;
@@ -130,8 +132,8 @@ body {
 
 /* 게임 화면 */
 #game-container {
-  width: 100vw;
-  height: 100vh;
+  width: 1920px;
+  height: 1080px;
   background: #fffae2;
   display: flex;
   flex-direction: column;
@@ -354,8 +356,8 @@ h3 {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 1920px;
+  height: 1080px;
   background: #fffae2;
   padding: 0;
   z-index: 100;
@@ -596,9 +598,15 @@ hr.divider {
 
 /* 다음 문제 버튼 깜빡임 */
 @keyframes blink {
-  0% { opacity: 1; }
-  50% { opacity: 0.1; }
-  100% { opacity: 1; }
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 #next-problem.blinking img {
@@ -610,8 +618,8 @@ hr.divider {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 1920px;
+  height: 1080px;
   background-color: #fffae2;
 
   display: flex;
