--- a/style.css
+++ b/style.css
@@ -158,14 +158,14 @@ body {
   z-index: 50;
 }
 
-#home-button {
+.home-button {
   background: none;
   border: none;
   cursor: pointer;
   padding: 0;
 }
 
-#home-button img {
+.home-button img {
   width: 50px;
   height: 50px;
   object-fit: contain;
